raw/RAMDHANI AZIZ FARID 6422 245150207111067/2024-11-14-08-25-49.ceg/compilation.txt
NT.java:34: error: cannot find symbol
        Scanner input = new Scaneer (System.in);
                            ^
  symbol:   class Scaneer
  location: class NT
1 error
Not compiled
